test(backend): Fix existing test and add more controller tests  #36